<resources>
    <string name="app_name">Niramaya_app</string>
    <string name="this_is_sample_text">This is Sample text</string>
    <string name="hint_ph">Enter your Phone No.</string>
    <string name="hint_otp">Enter your OTP</string>
    <string name="network_is_unreachable_">Network is unreachable</string>
    <string name="loading___">Loading ...</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="home">Home</string>
    <string name="Login">Login</string>
    <string name="go_to_login">Go to Login</string>
    <string name="ok">Ok</string>
    <string name="hello_test_toast">Hello Test Toast</string>
    <string name="toast">Toast</string>
    <string name="scan_code">Scan Code</string>
    <string name="go_to_scanner">Go to Scanner</string>
    <string name="qr_code_scanner">QR Code scanner</string>
    <string name="result_of_scanning">Result of Scanning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>