<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <com.niramaya.niramaya_app.customview.TextView_custom
        android:text="@string/splash_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.niramaya.niramaya_app.customview.Button_custom
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"/>
    <com.niramaya.niramaya_app.customview.Button_custom
        android:id="@+id/btScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_scanner"/>
</LinearLayout>